# minview-native

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  build_test.bat  build_test2.bat  build_test3.bat  build_test4.bat  build_test5.bat  build_test6.bat  build_test7.bat  dump_all.cpp  test_meta.cpp  test_title.cpp  test_title2.cpp  test_title3.cpp  test_title4.cpp  test_title5.cpp  test_title6.cpp  test_title7.cpp  title_debug.txt  title_debug3.txt  title_debug6.txt
src/: MinView.rc  app.cpp  app.h  decoder.cpp  decoder.h  indexer.cpp  indexer.h  main.cpp  metadata.cpp  metadata.h  renderer.cpp  renderer.h  viewer.cpp  viewer.h  window.cpp  window.h
